2010-10-07  Vadim Kurland  <vadim@vk.crocodile.org>

	* FindObjectWidget.cpp (showObject): rolled back change done in
	r3320 (refs #1790) "When an object is found using Find and the
	object is in the object tree, the keyboard focus shifts to the
	Object Panel". That change broke highlighting of the found object
	in rules.

	* refs #336 "Need template for PIX firewall"; added template for
	PIX 50X (501 and 506)

2010-10-06  Vadim Kurland  <vadim@vk.crocodile.org>

	* FWWindow.cpp (FWWindow::showIntroDialog): fixed compile problem
	with old Qt (v < 4.5.0).

	* FWWindow.cpp (FWWindow::showIntroDialog): See #1765, #1779 Will
	show a dialog inviting the user to watch Quick Start Guide on the
	web site when they run the GUI for the first few times. The dialog
	is shown instead of the Time of the day dialog. Switching to the
	tip of the day after 5 starts.

	* RoutingCompiler_pix.cpp (emptyRDstOrRItf::processNext): fixed
	#1783 "PIX routing entries require interface, but PIX config will
	compile without interface in Routing rule". Policy compiler for PIX
	now checks that both "interface" and "gateway" rule elements are
	not empty.

2010-10-05  Vadim Kurland  <vadim@vk.crocodile.org>

	* OSConfigurator_linux24.cpp (printRunTimeWrappers): fixed SF bug
	3077132 "no PREROUTING rule with *-Interface". Rules matching
	addresses of a wildcard interface (e.g. "ppp*") were not properly
	generated.

	* RuleSetView.cpp (updateSelectionSensitiveActions): fixed SF bug
	3039681 "context-menu items inconsistent for Single/Multiple
	rules". When several rules are selected in rule set, some context
	menu itmes should turn to plural.

	* FWWindow.cpp (prepareRulesMenu): fixed #1778 "main menu Rules
	should have the same items that context RuleSetView menu when no
	rules are selected"

2010-10-04  Vadim Kurland  <vadim@vk.crocodile.org>

	* ObjectManipulator.cpp (showObjectInTree): fixed #1777 "scroll
	new fw object to the top of the tree view panel once its created"