@@ -11,7 +11,6 @@
 ##  {{$test}}       -- doing installation in test mode
 ##
 
-
 {{if schedule_rollback}}
 reload in {{$rbtimeout}}
 {{endif}}
