@@ -527,6 +527,13 @@
     </p>
   </li>
 
+  <li>
+    <p>
+      using command "terminal width 256" to turn off ANSI commands in
+      the PIX command echo.
+    </p>
+  </li>
+
 </ul>
 
 
